--- a/amplify-js-app/amplify/backend/backend-config.json
+++ b/amplify-js-app/amplify/backend/backend-config.json
@@ -16,5 +16,18 @@
 				}
 			}
 		}
+	},
+	"auth": {
+		"amplifyjsapp9551d87f": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": []
+		}
+	},
+	"storage": {
+		"partyjams": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
