--- a/amplify-js-app/amplify/backend/backend-config.json
+++ b/amplify-js-app/amplify/backend/backend-config.json
@@ -29,5 +29,13 @@
 			"service": "S3",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"function": {
+		"partyjam": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda",
+			"dependsOn": []
+		}
 	}
 }
