--- a/amplify-js-app/amplify/backend/backend-config.json
+++ b/amplify-js-app/amplify/backend/backend-config.json
@@ -30,12 +30,5 @@
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"function": {
-		"partyjam": {
-			"build": true,
-			"providerPlugin": "awscloudformation",
-			"service": "Lambda",
-			"dependsOn": []
-		}
-	}
+	"function": {}
 }
