--- a/amplify-js-app/amplify/backend/backend-config.json
+++ b/amplify-js-app/amplify/backend/backend-config.json
@@ -30,5 +30,12 @@
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"function": {}
+	"function": {
+		"getchant": {
+			"build": true,
+			"providerPlugin": "awscloudformation",
+			"service": "Lambda",
+			"dependsOn": []
+		}
+	}
 }
